syntax = "proto3";

package messages.request;


option java_multiple_files = true;
option java_package = "ru.practicum.ewm.stats.proto";

message UserPredictionsRequestProto {
    int64 user_id = 1;
    int32 max_result = 2;
}

message SimilarEventsRequestProto {
    int64 event_id = 1;
    int64 user_id = 2;
    int32 max_result = 3;
}

message InteractionsCountRequestProto {
    repeated int64 event_id = 1;
}

message RecommendedEventProto {
    int64 event_id = 1;
    double score = 2;
}